more attempts to fix the undefined issue